<resources>
    <string name="app_name">MyPlanner</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes_no_filter_item">ALL</string>
    <string name="note_add_tag_btn_text">+</string>
    <string name="create_note_title_hint">Title</string>
    <string name="create_note_body_hint">Body</string>
    <string name="add_note_tag_prompt">Tag</string>
    <string name="add_note_tag_hint">Tag</string>
    <string name="accept_note_tag_btn_txt">Accept</string>
    <string name="create_event_title">Create Event</string>
    <string name="create_note_title">Create Note</string>
    <string name="create_reminder_title">Create Reminder</string>
    <string name="view_note_title">View Note</string>
    <string name="edit_note_title">Edit Note</string>
    <string name="events_tab_title">Events</string>
    <string name="notes_tab_title">Notes</string>
    <string name="reminders_tab_title">Reminders</string>
    <string name="delete_item_title">Delete Item</string>
    <string name="enter_edit_mode_title">Enter Edit Mode</string>
    <string name="previous_day_title">Previous Day</string>
    <string name="next_day_title">Next Day</string>
    <string name="settings_title">Settings</string>
    <string name="exit_edit_mode_title">Exit Edit Mode</string>
    <string name="delete_title">Delete</string>
    <string name="tag_selector_title">Tag:</string>
    <string name="title_hint">Title</string>
    <string name="body_hint">Body</string>
    <string name="duration_title">Duration</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="body_button_text">Body</string>
    <string name="date_title">Date</string>
    <string name="start_time_title">Start Time</string>
    <string name="title_selector_title">Title</string>
    <string name="event_timed_title">Event Timed</string>
    <string name="safe_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
