<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/enter_edit_mode_button"
        android:icon="@drawable/ic_mode_edit_black_48dp"
        android:title="@string/enter_edit_mode_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/exit_edit_mode_button"
        android:icon="@drawable/ic_clear_black_48dp"
        android:title="@string/exit_edit_mode_title"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_button"
        android:icon="@drawable/ic_delete_black_48dp"
        android:title="@string/delete_title"
        app:showAsAction="ifRoom" />
</menu>