<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout2">
        <android.support.design.widget.AppBarLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <android.support.v7.widget.Toolbar
                android:id="@+id/create_note_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"/>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/create_note_nested_scroll_view"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:weightSum="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_element_vertical_margin">
                    <EditText
                        android:id="@+id/create_note_title_edit_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:layout_marginRight="@dimen/text_element_horizontal_margin"
                        android:layout_marginLeft="@dimen/text_element_horizontal_margin"
                        android:hint="@string/create_note_title_hint"
                        android:lines="1"
                        android:inputType="textCapWords" />

                </RelativeLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_element_horizontal_margin"
                    android:layout_marginRight="@dimen/text_element_horizontal_margin"
                    android:id="@+id/scrollView" >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:id="@+id/create_note_body_edit_txt"
                        android:inputType="textLongMessage"
                        android:hint="@string/create_note_body_hint" />
                </ScrollView>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/notes_tag_btn_height"
                    android:id="@+id/horizontalScrollView"
                    android:layout_marginLeft="@dimen/text_element_horizontal_margin"
                    android:layout_marginRight="@dimen/text_element_horizontal_margin"
                    android:scrollbarSize="0dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/note_button_holder_layout">

                        <Button
                            android:layout_width="@dimen/notes_tag_btn_height"
                            android:layout_height="@dimen/notes_tag_btn_height"
                            android:text="@string/note_add_tag_btn_text"
                            android:id="@+id/create_note_add_tag_btn" />
                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:background="@color/colorPrimary"
        android:id="@+id/linearLayout2">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/create_note_cancel_btn"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:id="@+id/create_note_save_btn"
            style="@style/Base.Widget.AppCompat.Button.Borderless" />
    </LinearLayout>

</RelativeLayout>